--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -17,8 +17,8 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: yarn install
-    - run: yarn build --if-present
-    - run: yarn test --if-present
+    # - run: yarn install
+    # - run: yarn build --if-present
+    # - run: yarn test --if-present
       env:
         CI: true
