--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   ],
   "scripts": {
     "start": "live-server --open=./index.html",
-    "build": "",
-    "test": ""
+    "build": "lerna run build",
+    "test": "lerna run test"
   },
   "dependencies": {
     "lerna": "^4.0.0",
